Align fixes for privacy policy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,8 @@ table {
   border-spacing: 0; }
 
 .containerpp{
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 25%!important;
+  margin-right: 25%!important ;
 }
 .pph2{
     font-size: 20px;
@@ -556,5 +556,11 @@ footer {
   .containerpp{
     margin-left: 10%;
     margin-right: 10%;
+  }
+  @media screen and (min-width: 1025px) and (max-width: 1280px) {
+    .containerpp{
+      margin-left: 25%;
+      margin-right: 25%;
+    }
   }
 }
